frontend/test/should_pass/reuse_008.grg
using attrib_model_001;

rule r {
	x: Node;
	y: Node;
	x -e:Edge-> y;
	x -f:EBOOL-> y;

	replace {
		x; y;
		- ee:typeof(f)<e> ->;
		-f->;
	}
}


